Add product ID for Xbox One S gamepad on Mac

In Chrome for Mac, when Xbox gamepads are connected over USB but no
driver is installed to expose them through the GameController
framework, Chrome uses an internal driver to read button and axis data
from the gamepads. The internal driver recognizes product and vendor
IDs for the Xbox 360 USB gamepad and Xbox One gamepad (connected over
USB), but fails to recognize the newer Xbox One S gamepad when
connected over USB because it advertises a different product ID.

This CL adds the Xbox One S product ID so this gamepad can be used in
Chrome even when a driver is not installed.

BUG=773048

Change-Id: I589ab71f54b43d8f873efb3abc349ed7dc0ba6dc